# Ayscky

./: .gitignore  README.md  pyproject.toml
ayscky/: manage.py
ayscky/ayscky/: asgi.py  settings.py  urls.py  wsgi.py
ayscky/discovery/: apps.py
