[tool.poetry]
name = "ayscky"
version = "0.1.0"
description = ""
authors = ["Viktor Martynov <vm-viktor@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.7"
pillow = "^10.4.0"
coverage = "^7.6.0"
flake8 = "^7.1.0"
django-debug-toolbar = "^4.4.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
